refactor: Update to Quarkus 2.7.2.Final and Java 17
Signed-off-by: Jorge Solórzano <jorsol@ongres.com>