@@ -17,7 +17,6 @@ import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.fasterxml.jackson.databind.node.TextNode;
 import com.github.fge.jackson.jsonpointer.JsonPointer;
 import com.github.fge.jsonpatch.JsonPatchOperation;
-import com.google.common.collect.ImmutableList;
 import io.fabric8.kubernetes.client.CustomResource;
 import io.stackgres.operator.initialization.DefaultCustomResourceFactory;
 import io.stackgres.operatorframework.admissionwebhook.AdmissionReview;
@@ -29,7 +28,7 @@ public abstract class DefaultStateMutator
     <R extends CustomResource<?, ?>, T extends AdmissionReview<R>>
     implements JsonPatchMutator<T> {
 
-  protected static final ObjectMapper MAPPER = new ObjectMapper();
+  private ObjectMapper objectMapper;
 
   private DefaultCustomResourceFactory<R> factory;
 
@@ -37,18 +36,27 @@ public abstract class DefaultStateMutator
 
   @PostConstruct
   public void init() {
-    defaultResource = factory.buildResource();
+    this.defaultResource = factory.buildResource();
+  }
+
+  @Inject
+  public void setFactory(DefaultCustomResourceFactory<R> factory) {
+    this.factory = factory;
+  }
+
+  @Inject
+  public void setObjectMapper(ObjectMapper objectMapper) {
+    this.objectMapper = objectMapper;
   }
 
   public JsonNode getTargetNode(R resource) {
-    JsonNode resourceNode = MAPPER.valueToTree(resource);
-    return resourceNode;
+    return objectMapper.valueToTree(resource);
   }
 
   protected List<JsonPatchOperation> mutate(JsonPointer basePointer,
       R incomingResource) {
     Map<String, String> defaultParameters = getParametersNode(defaultResource);
-    ObjectNode defaultsListNode = MAPPER.createObjectNode()
+    ObjectNode defaultsListNode = objectMapper.createObjectNode()
         .setAll(Seq.seq(defaultParameters)
             .map(t -> t.map2(TextNode::new))
             .toMap(Tuple2::v1, Tuple2::v2));
@@ -56,16 +64,12 @@ public abstract class DefaultStateMutator
     JsonNode incomingNode = getTargetNode(incomingResource);
 
     if (incomingNode == null) {
-      return ImmutableList.of(buildAddOperation(basePointer, defaultsListNode));
+      return List.of(buildAddOperation(basePointer, defaultsListNode));
     } else {
-      return ImmutableList.of(buildReplaceOperation(basePointer, defaultsListNode));
+      return List.of(buildReplaceOperation(basePointer, defaultsListNode));
     }
   }
 
   protected abstract Map<String, String> getParametersNode(R incomingResource);
 
-  @Inject
-  public void setFactory(DefaultCustomResourceFactory<R> factory) {
-    this.factory = factory;
-  }
 }
